# dotmd-parser

./: .gitignore  CHANGELOG.md  LICENSE  README.ja.md  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml  release.yml  test.yml
docs/superpowers/plans/: 2026-06-20-guidance-health-check.md  2026-06-20-parallel-delegation-plan.md  2026-06-21-cache-affine-order.md  2026-06-21-include-injection-scan.md  2026-06-21-memory-governance.md  2026-06-22-analyze-include-ref.md
docs/superpowers/specs/: 2026-06-20-guidance-health-check-design.md  2026-06-20-parallel-delegation-plan-design.md  2026-06-21-cache-affine-order-design.md  2026-06-21-include-injection-scan-design.md  2026-06-21-memory-governance-design.md  2026-06-22-analyze-include-ref-design.md
src/dotmd_parser/: __init__.py  analyze.py  cache_order.py  checks.py  cli.py  digest.py  index.py  index_md.py  inventory.py  ledger.py  openrag.py  parser.py  plan.py  scan.py
src/dotmd_parser/templates/: SKILL.md  __init__.py
src/dotmd_parser/templates/dotmd_index/: SKILL.md
src/dotmd_parser/templates/prompts/: __init__.py  analyze-dependencies.md
tests/: test_aggregate.py  test_analyze.py  test_cache_order.py  test_checks.py  test_cli_analyze_kind.py  test_cli_check.py  test_cli_dotmd_index.py  test_cli_ledger.py  test_cli_plan.py  test_cli_resolve_scan.py  test_cli_stability.py  test_cost_estimate.py  test_empty_warnings.py  test_host_agent_plan.py  test_index_md.py  test_index_md_order.py  test_index_scope.py  test_inventory.py  test_ledger.py  test_openrag_push.py  test_orchestrator_detection.py  test_parser.py  test_plan.py  test_resolve_scan.py  test_scan.py  test_skill_integration.py  test_token_savings.py
