[project]
name = "dotmd-parser"
version = "0.6.0"
description = "Dependency graph parser, single-file folder index (dotmd-index.md), and AI analyzer for .md skill files — parse @include/@delegate/@ref directives, build graphs, resolve templates, generate RAG-friendly overviews, and ingest into OpenRAG"
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
authors = [
    { name = "dotmd-projects" },
]
keywords = [
    "claude-code",
    "ai-agent",
    "skill-management",
    "prompt-engineering",
    "dependency-graph",
    "SKILL.md",
    "markdown",
    "parser",
    "dotmd",
    "llm",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/dotmd-projects/dotmd-parser"
Repository = "https://github.com/dotmd-projects/dotmd-parser"
Issues = "https://github.com/dotmd-projects/dotmd-parser/issues"

[project.optional-dependencies]
openrag = ["openrag-sdk>=0.4.0,<0.5.0"]
pdf = ["pdfplumber>=0.10"]
docx = ["python-docx>=1.0"]
all = [
    "openrag-sdk>=0.4.0,<0.5.0",
    "pdfplumber>=0.10",
    "python-docx>=1.0",
]

[project.scripts]
dotmd-parser = "dotmd_parser.parser:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"dotmd_parser.templates" = ["*.md"]
"dotmd_parser.templates.prompts" = ["*.md"]
"dotmd_parser.templates.dotmd_index" = ["*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
